show image on post when you click show

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Image:</strong>
-  <%= @post.image %>
+  <image src="<%=(url_for(@post.image))%>">
 </p>
 
 <p>
